# opcua

./: README.md  pyproject.toml
src/: cli.py  settings.py
src/cert/: certificate.csr  certificate.pem  private_key.pem
src/commands/: __init__.py  backend.py  client.py  server.py
src/env/local/: .env
src/modules/backend/: __init__.py  app.py
src/modules/opcua/: __init__.py  client.py  server.py
