[tool.poetry]
name = "opcua"
version = "0.1.0"
description = "Implementing Industrial OPC UA Communication with Python and Asyncio"
authors = ["Gonzalo Ayuso <gonzalo123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncua = "^1.1.5"
click = "^8.1.8"
redis = "^5.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
